2008-07-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-index-manager.c:
	* src/trackerd/tracker-main.c:
	* src/trackerd/tracker-index-manager.h:

	Removing the QDBM indexes in case of force-reindex

2008-07-28  Ivan Frade  <ivan.frade@nokia.com>
	
	* src/libtracker-common/tracker-language.c:
	(tracker_language_stem_word): Return always a valid word, the
	input or the stemmed one.
	
	* src/libtracker-common/tracker-parser.c: 
	(analyze_text): Added stop words checking
	
	* tests/libtracker-common/tracker-parser-test.c: Updated tests
	with stop words.
	
2008-07-28  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-common/tracker-language.c:
	(tracker_language_new): Set stop words on creation.
	(language_get_stopword_filename): Build correct filename.
	(language_add_stopwords): Dont free contents of g_mapped_file
	
	* tests/libtracker-common/Makefile.am
	* tests/libtracker-common/tracker-parser-test.c: Added tests to
	tracker_parser_

2008-07-28  Ivan Frade  <ivan.frade@nokia.com>

	* tests/libtracker-common/tracker-ontology-test.c:
	(test_get_db_for_service): Updated to new default value.
	Used proper namespace for tests.

	* src/libtracker-common/tracker-parser.c:
	(tracker_parser_text): Fixed max words to index
	
2008-07-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Added compress and
	uncompress functions for attached database connections

2008-07-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-metadata.c:
	* src/libtracker-db/tracker-db-dbus.h:
	* src/libtracker-db/tracker-db-dbus.c:

	Make tracker_metadata_get return the columns as a GStrv, not the rows.
	This patch fixed tracker-search-tool's crash

2008-07-28  Carlos Garnacho  <carlos@imendio.com>

	* src/trackerd/tracker-crawler.c (file_enumerate_next_cb): Do not leak
	file infos and the enumerator.
	(tracker_crawler_start): Free remaining elements in the list.